# Transvirex-Logistics

./: .env.example  .gitignore  README.md  compose.yml  makefile  package-lock.json
backend/: pyproject.toml
backend/gateway/: Dockerfile  pyproject.toml
backend/gateway/src/gateway/: auth.py  config.py  main.py  middleware.py
backend/scripts/: seed_workbook.py
backend/services/ai_agent/: Dockerfile  pyproject.toml
backend/services/ai_agent/app/: agent.py  config.py  main.py  schemas.py  tools.py
backend/services/auth/: Dockerfile  pyproject.toml
backend/services/auth/app/: config.py  database.py  main.py  models.py  schemas.py  security.py
backend/services/auth/migrations/: env.py
backend/services/auth/migrations/versions/: 0efc1349dd67_add_fields_to_users.py  a1b2c3d4e5f6_user_id_to_uuid.py  bca573194548_create_users_table.py  f5e1106b6fc9_add_must_change_password_to_users.py  f84f90ef5ceb_initial_schema.py  fc02d0937a84_add_refresh_tokens_table.py
backend/services/auth/scripts/: seed_admin.py
backend/services/billing/: Dockerfile  alembic.ini  pyproject.toml
backend/services/billing/app/: config.py  db.py  events.py  main.py  models.py  pricing.py  schemas.py
backend/services/billing/app/routes/: invoices.py
backend/services/billing/migrations/: env.py
backend/services/billing/migrations/versions/: 0001_initial.py
backend/services/catalog/: Dockerfile  pyproject.toml
backend/services/catalog/app/: clients.py  config.py  deps.py  events.py  main.py  models.py  schemas.py
backend/services/catalog/app/routes/: customers.py  drivers.py  hubs.py
backend/services/catalog/migrations/: env.py
backend/services/catalog/migrations/versions/: 6adc4914240b_split_full_name_into_first_last_name.py  9d93ab25c9fd_added_customers_table.py  a48414fc38f2_driver_reference_counters.py  aa7734aba92d_hub_city_zip_v2.py  b0d328fa938e_add_hubs_table.py  bfe5c5f393f6_driver_hub_id.py  c95643c9c86a_customer_city_zip_reference.py  e0aa0ed47fbf_initial_driver_schema.py  e6df70bf3044_customer_reference.py  fa2d3511d7ad_hub_city_zip.py
backend/services/delivery/: Dockerfile  pyproject.toml
backend/services/delivery/app/: clients.py  config.py  database.py  db.py  deps.py  main.py  models.py  permissions.py  schemas.py
backend/services/delivery/app/routes/: deliveries.py  incidents.py  tracking.py
backend/services/delivery/migrations/: env.py
backend/services/delivery/migrations/versions/: 8b483039f02a_added_incident_table.py  dd5526d7994f_initial_delivery_and_tracking_schema.py  e4f651c21d3f_delivery_references_counter.py
backend/services/notification/: Dockerfile  pyproject.toml
backend/services/notification/app/: config.py  database.py  db.py  handlers.py  main.py  manager.py  models.py  schemas.py  security.py
backend/services/notification/migrations/versions/: 1fb76f69ae3e_initial_schema.py  5301bcd9e42a_convert_user_id_columns_to_strings.py
backend/services/reporting/: Dockerfile  pyproject.toml
backend/services/reporting/app/: config.py  handlers.py  kpi.py  main.py  models.py  schemas.py
backend/services/reporting/app/routes/: kpi.py
backend/services/reporting/migrations/: env.py
backend/services/reporting/migrations/versions/: 1021e4eff82a_initial_reporting_migration.py
backend/services/reporting/scripts/: seed_kpi_history.py
docs/: .~lock.EN_-_TRANSVIREX_LOGISTICS_DATABASE.xlsx#  EN_-_TRANSVIREX_LOGISTICS_DATABASE.xlsx  EVENTS.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: Footer.tsx  FormBits.tsx  FormModal.tsx  Navbar.tsx  NotificationBell.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useNotification.ts  useSearch.ts  useSort.ts
frontend/src/pages/: AiAgent.tsx  ChangePassword.tsx  CreateOrderModal.tsx  Customers.tsx  Home.tsx  Hubs.tsx  Incidents.tsx  LogisticsHub.tsx  NotFound.tsx  PlanRoutes.tsx  Reports.tsx  TestConnection.tsx  TrackInvoices.tsx  TrackOrders.tsx  login.tsx  register.tsx
frontend/src/services/: api.ts
