[project]
name = "ai_agent"
version = "0.1.0"
description = "AI Agent Service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "httpx>=0.27",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "pyjwt[crypto]>=2.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]