[project]
name = "notification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "psycopg[binary]==3.1.19",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "sqlalchemy==2.0.30",
    "uvicorn[standard]==0.29.0",
    "websockets==12.0",
    "passlib==1.7.4",
]
